Add Redis service and worker configuration to docker-compose, update settings and requirements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,30 @@ services:
     depends_on:
       - db
 
+  redis:
+    image: redis:7-alpine
+    container_name: crm_redis
+    restart: always
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  worker:
+    build: .
+    command: faststream run src.worker:app
+    volumes:
+      - .:/app
+    restart: always
+    depends_on:
+      redis:
+        condition: service_healthy
+    env_file: .env
+
 volumes:
   postgres_data:
+  redis_data:
