--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -20,3 +20,16 @@ services:
   redis:
     ports:
       - "6379:6379"
+
+  frontend:
+    build:
+      context: ./frontend
+      target: build
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    command: npm run dev -- --host
+    ports:
+      - "5173:5173"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
