--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,77 +1,31 @@
 services:
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - default
-
-  redis:
-    image: redis:7-alpine
-    restart: always
-    command: redis-server --appendonly yes
-    volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-    networks:
-      - default
-
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
-    networks:
-      - default
+    restart: always
+    env_file: .env
 
   worker:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
+    restart: always
+    env_file: .env
     command: taskiq worker src.core.broker:broker src.worker
-    networks:
-      - default
 
   scheduler:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
+    restart: always
+    env_file: .env
     command: taskiq scheduler src.core.broker:scheduler src.worker
-    networks:
-      - default
 
   frontend:
-    build: ./frontend
-    container_name: jidoka_frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     restart: always
-
-volumes:
-  postgres_data:
-  redis_data:
-
-networks:
-  default:
-    driver: bridge
+    depends_on:
+      - backend
