--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.0",
     "recharts": "^3.6.0",
     "tailwindcss": "^4.1.18"
